@@ -4,8 +4,10 @@ gcl (2.6.1-26) unstable; urgency=low
     accomodate mingw need for firstfile.o and lastfile.o
   * Remove incompatible -fomit-frame-pointer when compiling with -pg
     profiling
+  * Load sys-proclaim.lisp files forimproved linking and smaller object
+    size across the board, install same for use with compiler::link
 
- -- Camm Maguire <camm@enhanced.com>  Fri, 20 Feb 2004 03:52:57 +0000
+ -- Camm Maguire <camm@enhanced.com>  Fri, 20 Feb 2004 03:56:19 +0000
 
 gcl (2.6.1-25) unstable; urgency=low
 
